--- a/frontend/src/assets/scss/cmps/_actionsAdd.scss
+++ b/frontend/src/assets/scss/cmps/_actionsAdd.scss
@@ -24,13 +24,14 @@
     left: 18px;
     border-radius: 5px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
+
+    h1 {
+        margin-top: 70px;
+    }
 }
-
-
 
 .add-action-title-input {
     border-radius: 15px;
