--- a/frontend/src/assets/scss/cmps/_bottombar.scss
+++ b/frontend/src/assets/scss/cmps/_bottombar.scss
@@ -11,7 +11,6 @@
     background-color: $primary-color;
     transition: all 0.2s ease;
     opacity: 0.9;
-
 }
 
 .bottom-bar-box-not-visiable {
@@ -34,7 +33,7 @@ a {
 }
 
 .bottom-bar-cat-box {
-    margin: 0 15px;
+    margin: 0 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,6 +46,7 @@ a {
     }
 
     i {
+        font-size: 25px;
         color: rgb(223, 223, 223);
     }
 }
