--- a/frontend/src/assets/scss/pages/_home.scss
+++ b/frontend/src/assets/scss/pages/_home.scss
@@ -39,7 +39,7 @@
     color: white;
     width: 80%;
     border: 1px solid white;
-    margin: 20px 0;
+    margin: 10px 0;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
@@ -88,7 +88,8 @@
 
 .logo {
     position: relative;
-    width: 200px;
+    width: 150px;
+    height: 150px;
     margin: 0 auto;
     display: block;
 }
