--- a/frontend/src/assets/scss/cmps/_bottombar.scss
+++ b/frontend/src/assets/scss/cmps/_bottombar.scss
@@ -50,3 +50,15 @@ a {
         color: rgb(223, 223, 223);
     }
 }
+
+.selected-ling {
+
+    span {
+        color: white;
+    }
+
+    i {
+        font-size: 28px;
+        color: white;
+    }
+}
