--- a/frontend/src/assets/scss/global.scss
+++ b/frontend/src/assets/scss/global.scss
@@ -16,6 +16,7 @@
 @import './cmps/sideBar';
 @import './cmps/actionsAdd';
 @import './cmps/suggestedActions';
+@import './cmps/installModal';
 @import './pages/editUserInfo';
 
 $color1: #F7F7FC;
