--- a/frontend/src/assets/scss/pages/_home.scss
+++ b/frontend/src/assets/scss/pages/_home.scss
@@ -93,3 +93,15 @@
     margin: 0 auto;
     display: block;
 }
+
+.home-guest-box {
+    padding: 10px;
+    text-align: center;
+    margin: 0 auto;
+    font-family: 'Poppins', sans-serif;
+
+    p {
+        color: rgb(71, 71, 71);
+    }
+
+}
