--- a/frontend/src/assets/scss/cmps/_actionsPreview.scss
+++ b/frontend/src/assets/scss/cmps/_actionsPreview.scss
@@ -1,26 +1,9 @@
 $secondary-color: #1CC8EE;
 
-.action-box-done-axis-left {
-    width: 345px;
-    z-index: 2;
-    // border: 2px solid #602eeab0;
-    // border: 2px solid $primary-color;
-    position: absolute;
-    transform: rotate(25deg);
-}
-
-.action-box-done-axis-right {
-    width: 345px;
-    z-index: 2;
-    // border: 2px solid $primary-color;
-    // border: 2px solid #602eeab0;
-    position: absolute;
-    transform: rotate(-25deg);
-}
-
 .action-box-not-done {
     position: relative;
     width: 280px;
+    min-height: 170px;
     padding: 10px 20px;
     background-color: #fff;
     box-shadow: 0px 8px 16px rgba(53, 33, 33, 0.04);
@@ -39,6 +22,7 @@ $secondary-color: #1CC8EE;
 .action-box-done {
     position: relative;
     width: 280px;
+    min-height: 170px;
     padding: 10px 20px;
     background-color: rgba(255, 255, 255, 0.582);
     box-shadow: 0px 8px 16px rgba(53, 33, 33, 0.04);
@@ -57,12 +41,14 @@ $secondary-color: #1CC8EE;
 
 .edit-action-box {
     position: absolute;
-    width: 250px;
-    left: 5px;
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
     background-color: #fff;
     padding: 12px 25px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: flex-start;
 }
 
@@ -72,6 +58,7 @@ $secondary-color: #1CC8EE;
     border-radius: 15px;
     border: none;
     padding: 8px 25px;
+    width: 70%;
 
     &:focus {
         outline: none;
@@ -162,7 +149,7 @@ $secondary-color: #1CC8EE;
     font-size: 14px;
 }
 
-.done-action-btn {
+.undone-action-btn {
     background-color: $secondary-color;
     color: #fff;
     border-radius: 20px;
@@ -180,7 +167,7 @@ $secondary-color: #1CC8EE;
     }
 }
 
-.undone-action-btn {
+.done-action-btn {
     background-color: white;
     color: $secondary-color;
     border-radius: 20px;
