--- a/frontend/src/assets/scss/cmps/_insights.scss
+++ b/frontend/src/assets/scss/cmps/_insights.scss
@@ -5,7 +5,7 @@
   border: 1px solid $secondary-color;
   padding: 10px;
   width: 80%;
-  margin: 10px auto;
+  margin: 10px auto 70px;
   text-align: center;
   display: flex;
   flex-direction: column;
