--- a/frontend/src/assets/scss/cmps/_login.scss
+++ b/frontend/src/assets/scss/cmps/_login.scss
@@ -1,5 +1,5 @@
 .login-box {
-    padding: 80px 20px;
+    padding: 60px 20px;
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0px 8px 16px rgba(53, 33, 33, 0.04);
@@ -73,9 +73,21 @@
 
 }
 
-// .logout-btn {
-//     background-color: #fff;
-//     border: 1px solid $primary-color;
-//     font-size: 12px;
-//     border-radius: 3px;
-// }
+.login-guest-btn {
+    margin-top: 20px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 1px solid $primary-color;
+    // background-color: rgba(245, 211, 18, 0.863);
+    background-color: rgb(157, 210, 135);
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Poppins' ,  sans-serif;
+    // color: $primary-color;
+    color: #894e00;
+
+    p {
+        margin: 5px 0 10px;
+        
+    }
+}
