--- a/frontend/src/assets/scss/cmps/_messageModal.scss
+++ b/frontend/src/assets/scss/cmps/_messageModal.scss
@@ -210,3 +210,24 @@
     text-align: center;
     width: 100%;
 }
+
+.rate-day-send-form-message-modal {
+    z-index: 9999;
+    padding: 15px 5px;
+    background-color: #00BA88;
+    color: #FCFCFC;
+    position: fixed;
+    border-radius: 0 0 20px 20px;
+    top: 0;
+    margin: 0;
+    left: 0;
+    text-align: center;
+    font-size: 16px;
+    width: 100%;
+
+    a {
+        color: #494949;
+        font-size: 18px;
+        margin: 0 3px;
+    }
+}
