--- a/frontend/src/assets/scss/pages/_rateDate.scss
+++ b/frontend/src/assets/scss/pages/_rateDate.scss
@@ -10,13 +10,14 @@ $main-gradient: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
     align-items: center;
 
     .date-box {
-        margin-bottom: 20px;
+        width: 200px;
+        text-align: center;
         border-radius: 15px;
         border: none;
-        padding: 15px 40px;
-        background-color: #fff;
-        color: $primary-color;
-        box-shadow: 0px 8px 16px rgba(53, 33, 33, 0.04);
+        padding: 10px;
+        margin: 15px 0;
+        background-color: #EFF0F7;
+        color: #5F2EEA;
 
         &:focus {
             outline: none;
@@ -46,7 +47,7 @@ $main-gradient: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
     border-radius: 15px;
     border: none;
     padding: 12px 25px;
-    background-color: $input-bgc;   
+    background-color: $input-bgc;
     width: 60vw;
     color: #14142B;
     font-size: 14px;
@@ -72,7 +73,7 @@ $main-gradient: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
     transition: all 0.1s ease;
     border: 1px solid lightgray;
 
-    &:focus {   
+    &:focus {
         outline: none;
     }
 
@@ -86,6 +87,8 @@ $main-gradient: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    width: 90%;
     // padding-top: 20px;
 }
 
@@ -113,3 +116,4 @@ $main-gradient: linear-gradient(114.44deg, #7433FF 0%, #FFA3FD 100%);
     }
 }
 
+.rate-day-page-date-input {}
