--- a/frontend/src/assets/scss/pages/_staticCategories.scss
+++ b/frontend/src/assets/scss/pages/_staticCategories.scss
@@ -2,7 +2,15 @@
     padding: 40px;
     padding-top: 0;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.static-categories-list {
+    display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: space-between;
 }
 
 .static-categories-box-heading {
@@ -54,6 +62,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     p {
         margin: 0;
     }
@@ -77,16 +86,67 @@
     color: $primary-color;
     border: 1px solid $primary-color;
 }
-// .added-ribbon {
-//     background-color: white;
-//     position: absolute;
-//     top: -10px;
-//     padding: 3px 5px;
-//     right: 38px;
-//     font-size: 10px;
-//     color: $primary-color;
-//     border: 1px solid $primary-color;
-// }
 
+.info-icon-categories {
+    position: absolute;
+    top: 35px;
+    left: 15px;
+    font-size: 22px;
+    color: $primary-color;
+}
 
-  
+.explanation-category-box-open {
+    position: fixed;
+    z-index: 5;
+    transform: translateX(0);
+    transition: all 0.3s ease-in-out;
+    padding: 20px;
+    border-radius: 10px 20px 10px 20px;
+    background-color: white;
+    font-size: 18px;
+    text-align: center;
+    top: 65px;
+    left: 5px;
+    color: rgb(70, 70, 70);
+    font-family: 'Poppins', sans-serif;
+    width: 98%;
+    box-shadow: 0px 15px 15px 2px #E0E0E0;
+
+    span {
+        color: $primary-color;
+        font-size: 19px;
+    }
+
+    a {
+        color: $primary-color;
+        font-size: 19px;
+    }
+}
+
+.explanation-category-box-close {
+    z-index: 5;
+    box-shadow: 0px 15px 15px 2px #E0E0E0;
+    position: fixed;
+    width: 98%;
+    transform: translateX(-115%);
+    transition: all 0.3s ease-in-out;
+    padding: 20px;
+    border-radius: 10px 20px 10px 20px;
+    background-color: white;
+    font-size: 18px;
+    text-align: center;
+    top: 65px;
+    left: 5px;
+    color: rgb(70, 70, 70);
+
+    span {
+        color: $primary-color;
+        font-size: 19px;
+    }
+
+    a {
+        color: $primary-color;
+        font-size: 19px;
+    }
+
+}
